@@ -116,7 +116,12 @@ get_all_vars(formula, data, \dots)
 }
 \value{
   A \code{\link{data.frame}} containing the variables used in
-  \code{formula} plus those specified \code{\dots}.
+  \code{formula} plus those specified in \code{\dots}.  It will have
+  additional attributes, including \code{"terms"} for an object of class
+  \code{"\link[stats:terms.object]{terms}"} derived from \code{formula},
+  and possibly \code{"na.action"} giving information on the handling of
+  \code{NA}s (which will not be present if no special handling was done,
+  e.g. by \code{\link{na.pass}}).
 }
 \seealso{\code{\link{model.matrix}} for the \sQuote{design matrix},
   \code{\link{formula}} for formulas  and
